[package]
name = "wasmparser-nostd"
version = "0.100.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"
keywords = ["parser", "WebAssembly", "wasm"]
description = """
A simple event-driven library for parsing WebAssembly binary files.
"""
edition.workspace = true
exclude = ["benches/*.wasm"]

[dependencies]
indexmap = { version = "0.4.0", package = "indexmap-nostd", default-features = false }
embedded-alloc = { version = "0.5", optional = true }
portable-atomic-util = { version = "0.1.3", default-features = false, features = ["alloc"], optional = true }
portable-atomic = { version = "1.3", default-features = false, features = ["require-cas", "critical-section"], optional = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
wat = { path = "../wat" }
wast = { path = "../wast" }
rayon = { workspace = true }
once_cell = "1.13.0"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std"]
std = ["indexmap/std"]
portable-atomics = ["embedded-alloc", "portable-atomic-util", "portable-atomic"]